Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88188

Cannot click to select an item in a QTreeWidget

XMLWordPrintable

    • macOS
    • ae3594436b9b0540ef94379a73bf8fec8d3b7465 (qt/qtbase/dev) 46aae17ac1a4d3612aea487f37b747f32e772408 (qt/qtbase/6.0) 0b0e43bc408921295cce0dd12d6943c19eadad4c (qt/qtbase/5.15)

      We (Autodesk AutoCAD for Mac team) have a search box that popups a QTreeWidget to show the search results when the user types in the search box. After upgrading to Qt 5.15 from 5.12, we can no longer click to select an item from the list of the QTreeWidget using a mouse or a trackpad. (Select via keyboard works as usual.)

       

      Here's how we setup the event:

      //m_pPopup is a QTreeWidget

      connect(m_pPopup, SIGNAL(itemClicked(QTreeWidgetItem*,int)), SLOT(onItemSelected()));

       

      Here's a screenshot of the control:

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vestbo Tor Arne Vestbø
            rickqiu Rick Qiu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes